# Ordo

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.platform  Makefile  README.md  ROADMAP.md  cliff.toml  compose.yml  deny.toml
.claude/projects/-home-ubuntu-cspace-ordo/memory/: MEMORY.md  project_state.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh  start-backends.sh
.github/workflows/: build-platform-image.yml  ci.yml  deploy-docs-custom.yml  deploy-studio.yml  release-cli.yml  release.yml
crates/ordo-api-client/: Cargo.toml
crates/ordo-api-client/src/: lib.rs  types.rs
crates/ordo-cli/: Cargo.toml
crates/ordo-cli/src/: api.rs  catalog.rs  config.rs  deployments.rs  diff.rs  eval.rs  exec.rs  fmt.rs  init.rs  link.rs  lint.rs  login.rs  main.rs  mcp.rs  new.rs  output.rs  project.rs  publish.rs  pull.rs  push.rs  replay.rs  runtime.rs  test_runner.rs  trace.rs  validate.rs
crates/ordo-cli/src/guard/: agent.rs  audit.rs  hook.rs  init.rs  log.rs  mod.rs  settings.rs  test.rs
crates/ordo-cli/tests/: guard_hook.rs  offline_loop.rs  push_catalog_validation.rs  replay.rs
crates/ordo-core/: Cargo.toml  Cargo.toml.bak  README.md
crates/ordo-core/benches/: jit_comparison_bench.rs  jit_realistic_bench.rs  jit_stress_bench.rs  optimization_bench.rs  schema_jit_bench.rs
crates/ordo-core/src/: error.rs  lib.rs  testing.rs
crates/ordo-core/src/capability/: mod.rs  provider.rs  registry.rs
crates/ordo-core/src/context/: store.rs
crates/ordo-core/src/expr/: compiler.rs  functions.rs  optimizer.rs  vectorized.rs  vm.rs
crates/ordo-core/src/expr/jit/: schema_compiler.rs  schema_evaluator.rs
crates/ordo-core/src/filter/: mod.rs  path_collector.rs
crates/ordo-core/src/rule/: compiled.rs  compiled_executor.rs  compiler.rs  executor.rs  mod.rs  model.rs  step.rs
crates/ordo-core/src/trace/: mod.rs
crates/ordo-derive/: Cargo.toml
crates/ordo-grpc/: Cargo.toml
crates/ordo-platform/: Cargo.toml
crates/ordo-platform/migrations/: 0001_initial.sql  0002_servers.sql  0003_github.sql  0004_environments.sql  0005_drafts_deployments.sql  0006_rbac.sql  0007_backfill_member_system_roles.sql  0008_release_center.sql  0009_release_request_snapshots.sql  0010_release_request_content_diff.sql  0011_environment_server_bindings.sql  0012_org_hierarchy.sql  0013_notifications.sql  0014_server_capabilities.sql  0015_release_execution_runtime_state.sql  0016_release_request_history.sql  0017_sub_rule_assets.sql  0018_drop_sub_rule_versions.sql  0019_org_connect_tokens.sql  0020_one_active_release_execution.sql  0021_execution_metric_snapshots.sql  0022_rollback_failed_status.sql
crates/ordo-platform/src/: ai.rs  analytics.rs  auth.rs  catalog.rs  config.rs  contract.rs  environment.rs  error.rs  github.rs  i18n.rs  lib.rs  main.rs  member.rs  metrics.rs  middleware.rs  models.rs  notification.rs  org.rs  project.rs  proxy.rs  rbac.rs  release.rs  ruleset_draft.rs  ruleset_history.rs  server_registry.rs  store.rs  sub_org_member.rs  sub_rules.rs  sync.rs  template.rs  templates_api.rs  testing.rs
crates/ordo-platform/src/models/: auth.rs  catalog.rs  deployments.rs  environments.rs  governance.rs  notifications.rs  rbac.rs  release.rs  servers.rs  sub_rules.rs
crates/ordo-platform/src/release/: diff.rs  executions.rs  policies.rs  requests.rs  reviews.rs
crates/ordo-platform/src/store/: bootstrap.rs  catalog.rs  codec.rs  environments.rs  execution_metrics.rs  github.rs  members.rs  notifications.rs  organizations.rs  projects.rs  rbac.rs  releases.rs  rows.rs  rulesets.rs  servers.rs  sub_rules.rs  users.rs
crates/ordo-platform/templates/loan-approval/: concepts.json  contract.json  facts.json  meta.json  ruleset.json  samples.json  tests.json
crates/ordo-platform/templates/loan-approval/i18n/: en.json  zh-CN.json  zh-TW.json
crates/ordo-platform/tests/: templates_integration.rs
crates/ordo-proto/: Cargo.toml
crates/ordo-protocol/: Cargo.toml
crates/ordo-protocol/src/: convert.rs  lib.rs
crates/ordo-protocol/src/types/: condition.rs  expr.rs  mod.rs  ruleset.rs  step.rs
crates/ordo-server/: Cargo.toml
crates/ordo-server/src/: api.rs  api_integration_tests.rs  api_tests.rs  capability_registry.rs  capture.rs  config.rs  grpc.rs  json.rs  main.rs  metrics.rs  store.rs  telemetry.rs  tenant.rs  uds.rs  wal.rs  webhook.rs
crates/ordo-server/src/debug/: api.rs
crates/ordo-server/tests/: grpc_test.rs  sync_test.rs  uds_test.rs
crates/ordo-studio-format/: Cargo.toml
crates/ordo-studio-format/src/: concepts.rs  convert_reverse.rs  lib.rs
crates/ordo-wasm/: Cargo.toml
crates/ordo-wasm/src/: lib.rs
deploy/: BACKUP_AND_DR.md  CONFIGURATION.md
deploy/k8s/: README.md  kustomization.yaml  namespace.yaml
deploy/k8s/dependencies/: nats.yaml  postgres.yaml
deploy/k8s/platform/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml  worker-deployment.yaml
deploy/k8s/server/: configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  secret.yaml  service.yaml
deploy/nomad/: DEMO_DEPLOYMENT.md  devcontainer-entrypoint.sh  devcontainer-runtime.Dockerfile  ordo-devcontainer.nomad  ordo-nats.nomad  ordo-platform-worker.nomad  ordo-platform.nomad  ordo-postgres.nomad  ordo-server-cluster.nomad  ordo-studio.nomad
examples/capability-demo/: Cargo.toml
examples/capability-demo/src/: main.rs
npm/: README.md  install.js  package.json
ordo-editor/: package.json  pnpm-lock.yaml
ordo-editor/apps/docs/: DEPLOYMENT.md
ordo-editor/apps/playground/: package.json
ordo-editor/apps/studio/: index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
roadmap/: PRODUCT_ROADMAP.md
scripts/: backup.sh  restore.sh  sync-version.sh
scripts/bench/: README.md
sdk/go/: README.md
sdk/go/ordo/: client.go  degradation_test.go  options.go  types.go
sdk/java/: README.md  pom.xml
sdk/python/: README.md
sdk/python/ordo/: __init__.py  client.py  degrade.py  grpc_client.py  http_client.py  models.py  retry.py
sdk/python/tests/: test_degrade.py  test_retry.py
(+197 files in other folders)
