[package]
name = "ordo-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async client for the Ordo control-plane HTTP API"
publish = false

[dependencies]
ordo-studio-format = { path = "../ordo-studio-format" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
