[package]
name = "ordo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the Ordo rule engine"
publish = false

[[bin]]
name = "ordo"
path = "src/main.rs"

[dependencies]
ordo-core = { path = "../ordo-core" }
ordo-studio-format = { path = "../ordo-studio-format" }
ordo-api-client = { path = "../ordo-api-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
toml = "0.8"
dirs = "5"
rpassword = "7"
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
hashbrown = { workspace = true }
