[package]
name = "ordo-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "High-performance rule engine with JIT compilation, visual editor support, and database filter push-down"
keywords = ["rule-engine", "business-rules", "jit", "decision", "evaluation"]
categories = ["algorithms", "data-structures"]
repository = "https://github.com/Pama-Lee/Ordo"
homepage = "https://github.com/Pama-Lee/Ordo"
documentation = "https://docs.rs/ordo-core"
readme = "README.md"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
hashbrown.workspace = true
parking_lot.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Signature support (optional, requires getrandom which needs special config for wasm)
ed25519-dalek = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# JIT compilation (optional, not available on wasm32)
cranelift = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
cranelift-codegen = { workspace = true, optional = true }

# Concurrent data structures
dashmap.workspace = true
crossbeam-channel.workspace = true
lru.workspace = true

# Derive macros
ordo-derive = { workspace = true, optional = true }

[features]
default = ["derive", "jit", "signature"]
derive = ["ordo-derive"]
jit = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native", "cranelift-codegen"]
signature = ["ed25519-dalek", "rand", "base64", "getrandom"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
ordo-derive = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "optimization_bench"
harness = false

[[bench]]
name = "schema_jit_bench"
harness = false

[[bench]]
name = "jit_comparison_bench"
harness = false

[[bench]]
name = "jit_realistic_bench"
harness = false

[[bench]]
name = "jit_stress_bench"
harness = false

[[bench]]
name = "unified_bench"
harness = false

[[bench]]
name = "init_bench"
harness = false
